# cda

./: .gitignore  LICENSE  README.md  cda.cabal  stack.yaml
app/: Main.hs
src/: Alias.hs  AliasIO.hs  AliasParser.hs  CommandParser.hs  Commands.hs  Main.hs  Parser.hs
