name:                cda
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/coffee-cup/cda#readme
license:             BSD3
license-file:        LICENSE
author:              Jake Runzer
maintainer:          jakerunzer@gmail.com
copyright:           2017 Jake Runzer
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Alias
  ghc-options:         -fwarn-incomplete-patterns
  build-depends:       base >= 4.7 && < 5
                     , optparse-applicative >= 0.14 && < 0.15
                     , directory >= 1.3 && < 1.4
                     , transformers >= 0.5 && < 0.6
                     , filepath >= 1.4 && < 1.5
  default-extensions:  NoMonomorphismRestriction
                     , OverloadedStrings
                     , FlexibleContexts
                     , GeneralizedNewtypeDeriving
  default-language:    Haskell2010

executable cda
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fwarn-incomplete-patterns
  build-depends:       base
                     , cda
                     , optparse-applicative >= 0.14 && < 0.15
                     , directory >= 1.3 && < 1.4
                     , transformers >= 0.5 && < 0.6
                     , filepath >= 1.4 && < 1.5
  default-extensions:  NoMonomorphismRestriction
                     , OverloadedStrings
                     , FlexibleContexts
                     , GeneralizedNewtypeDeriving
  default-language:    Haskell2010

test-suite cda-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , cda
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/coffee-cup/cda
